add scalar to docs page
