# swagger-spec.json
@@ -107,7 +107,7 @@
         ]
       }
     },
-    "/api/v1/products/{id}": {
+    "/api/v1/products/id/{id}": {
       "get": {
         "description": "Retorna os detalhes de um produto específico com base no ID fornecido.",
         "operationId": "ProductController_getProductById",
@@ -432,7 +432,7 @@
   },
   "info": {
     "title": "InfoBrasil API",
-    "description": "API de integração do sistema Retaguarda (by InfoBrasil) com outros sistemas, como ERPs, e-commerce, etc.",
+    "description": "API de integração do sistema Retaguarda (by InfoBrasil) com outros sistemas, como ERPs, e-commerce, etc. <br><br>\n      O sistema conta com duas formas de autenticação:<br> \n      - Basic Auth para login e obtenção de token JWT<br>\n      - JWT para acesso aos endpoints protegidos.\n      <br><br>\n      A API é organizada em módulos, cada um responsável por uma área específica do sistema, como produtos, clientes, vendas, etc.",
     "version": "1.0",
     "contact": {}
   },
